Fix broken quit() call for database in signal handler. Automatically focus password entry for encrypted uploads. Wrap listings in a container div, adjust CSS.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -48,10 +48,12 @@ a {
   min-height: 200px;
 }
 
-/* listings */
-li.uploadListing {
+/* upload listings */
+#uploadListingContainer {
   font-family: monospace;
   font-size: 14px;
+}
+li.uploadListing {
   list-style: none;
   line-height: 20px;
   padding: 5px;
